--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,4 +1,4 @@
-<form action="/expense" method="POST" style="margin: 20px 20px;">
+<form action="/" method="POST" style="margin: 20px 20px;">
   <div class="form-row">
     <div class="col-md-4 mb-3">
       <label>Name</label>
