feat:add edit delete page

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,7 @@
       </select>
     </div>
     {{!-- totalAmount --}}
-    <h5 class='mb-3 ml-5'>總金額：<span class='ml-4'>N/A</span></h5>
+    <h5 class='mb-3 ml-5'>總金額：<span class='ml-4'>{{totalAmount}}</span></h5>
 
     <!-- money list -->
     <div class="container mt-5">
@@ -60,3 +60,6 @@
         </div>
       </div>
     </div>
+
+    <a class="btn btn-warning" href="/expense/new">新增支出
+    </a>
