--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -1,4 +1,4 @@
-<form action="/" method="POST" style="margin: 20px 20px;">
+<form action="/expense" method="POST" style="margin: 20px 20px;">
   <div class="form-row">
     <div class="col-md-4 mb-3">
       <label>Name</label>
@@ -8,15 +8,20 @@
   </div>
 
   <div class="col-md-4 mb-3">
-    <label>date</label>
+    {{!-- <label>date</label>
     <input type="text" class="form-control" placeholder="date" name="date">
   </div>
+  <div class="form-group row"> --}}
+    <label class="col-sm-2 col-form-label">date </label>
+    <div class="col-sm-8">
+      <input type="date" class="form-control" value="{{record.date}}" name="date">
+    </div>
 
 
-  <div class="col-md-4 mb-3">
-    <label>amount</label>
-    <input type="text" class="form-control" placeholder="amount" name="amount">
-  </div>
+    <div class="col-md-4 mb-3">
+      <label>amount</label>
+      <input type="text" class="form-control" placeholder="amount" name="amount">
+    </div>
 
   </div>
 
