--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,4 @@
-<!--       新增地區category -->
 <div id="head-right">
-
   <div id="category">
     <div class="form-group">
       <select class="form-control select-region">
@@ -13,17 +11,25 @@
         <option value="other">其他 </option>
       </select>
     </div>
+
     {{!-- totalAmount --}}
     <h5 class='mb-3 ml-5'>總金額：<span class='ml-4'>{{totalAmount}}</span></h5>
+
+
+
 
     <!-- money list -->
     <div class="container mt-5">
       <div class="row">
         <div class="col-md-10 col-12 mx-auto">
           <div class="card-columns">
-            {{#each record}}
+            {{#each records}}
             <a href="/expense/{{this.id}}" class="text-secondary">
               <div class="card mb-3">
+
+
+
+
 
                 <div class="card-body p-3">
                   <h6 class="card-title mb-1">{{this.name}}</h6>
