feat:Add merchant data

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -45,6 +45,10 @@
 
                   <h6 class="card-title mb-1">{{this.date}}</h6>
 
+
+                  <p style="margin: 0px"><span style="color:red;">{{this.merchant}}</p></span>
+
+
                   <a href="./expense/{{this._id}}/edit" method="get" style="text-decoration: none;">
                     <button type="button" class="btn btn-success btn-sm">修改</button>
                   </a>
