--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -17,6 +17,11 @@
       <input type="date" class="form-control" value="{{record.date}}" name="date">
     </div>
 
+    <div class="col-sm-8">
+      <label>商家</label>
+      <input type="text" class="form-control" placeholder="merchant" value="{{record.merchant}}" name="merchant">
+    </div>
+
 
     <div class="col-md-4 mb-3">
       <label>amount</label>
