--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -18,6 +18,15 @@
             <input type="date" class="form-control" value="{{record.date}}" name="date">
           </div>
         </div>
+
+
+        <div class="form-group row">
+          <label class="col-sm-2 col-form-label">商家: <sup>*</sup></label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" name="merchant" value="{{record.merchant}}">
+          </div>
+        </div>
+
         <div class="form-group row">
           <label class="col-sm-2 col-form-label">類別<sup>*</sup></label>
           <div class="col-sm-8">
