--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,8 @@
   <nav class="navbar navbar-dark bg-light">
     <div class="navbar-left">
 
-      <a class="fas fa-pen">家庭記帳本</a>
+
+      <a href="/" class="fas fa-pen">家庭記帳本</a>
     </div>
   </nav>
 
