--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,7 +21,7 @@
     <!-- money list -->
     <div class="container mt-5">
       <div class="row">
-        <div class="col-md-10 col-12 mx-auto">
+        <div class="col-md-20 col-12 mx-auto">
           <div class="card-columns">
             {{#each records}}
             <a href="/expense/{{this.id}}" class="text-secondary">
@@ -48,16 +48,21 @@
 
                   <p style="margin: 0px"><span style="color:red;">{{this.merchant}}</p></span>
 
+                  <div class="row">
+                    <div class="col-6 mt-3">
+                      <a href="./expense/{{this._id}}/edit" method="get" style="text-decoration: none;">
+                        <button type="button" class="btn btn-success btn-sm">修改</button>
+                      </a>
+                    </div>
 
-                  <a href="./expense/{{this._id}}/edit" method="get" style="text-decoration: none;">
-                    <button type="button" class="btn btn-success btn-sm">修改</button>
-                  </a>
 
+                    <div class="col-6 mt-3">
+                      <form action="./expense/{{ this._id }}?_method=DELETE" method="post">
+                        <button class="btn btn-outline-danger btn-sm" type="submit">刪除</button>
+                      </form>
+                    </div>
+                  </div>
 
-
-                  <form action="./expense/{{ this._id }}?_method=DELETE" method="post">
-                    <button class="btn btn-outline-danger btn-sm" type="submit">刪除</button>
-                  </form>
 
                 </div>
               </div>
