--- a/views/new.handlebars
+++ b/views/new.handlebars
@@ -33,11 +33,11 @@
   <div class="form-group">
     <select class="custom-select" name="category" required>
       <option value="">Category menu</option>
-      <option value="live">家居物業</option>
-      <option value="traffic">交通出行</option>
-      <option value="play">休閒娛樂</option>
-      <option value="eat">餐飲食品 </option>
-      <option value="other">其他 </option>
+      <option value="家居物業">家居物業</option>
+      <option value="交通出行">交通出行</option>
+      <option value="休閒娛樂">休閒娛樂</option>
+      <option value="餐飲食品">餐飲食品 </option>
+      <option value="其他">其他 </option>
     </select>
   </div>
 
